== 0.2.8 2008-02-14

* Add tasks for solr starting,stopping, and log tailing.

== 0.2.6 2008-02-14

* Make mongrel restarts only apply to mongrel slices

== 0.2.5 2008-02-11

* Added db cloning task

== 0.2.4 2008-02-06

* Symlink memcached.yml in on deploy if you enable the callback

== 0.2.3 2008-02-01

* Make log tailing environmentally aware.  Also add tasks to tail mongrel logs

== 0.2.2 2008-01-25

* sphinx:configure ultrasphinx configuration task

== 0.2.1 2008-01-25

* override default deploy recipe start/stop tasks

== 0.2.0 2008-01-23

* sphinx:symlink ultrasphinx configuration directory

== 0.1.9 2008-01-21

* Correct memcached tasks.

== 0.1.8 2008-01-20

* Add memcached tasks

== 0.1.7 2008-01-19

* fix symlink_configs task

== 0.1.6 2008-01-19

* add restart tasks for backgroundrb

== 0.1.5 2008-01-18

* fixed bug in filtered_remote_cache that prevented a changed checkout URL from taking over the cache

== 0.1.4 2008-01-17

* added sphinx:[reindex|start|stop|restart] matches only app servers with :sphinx => true

== 0.1.3 2008-01-17

* filtered_remote_cache to removes the cached copy of the source URL changed

== 0.1.2 2008-01-15

* added filtered_remote_cache capistrano deployment strategy

== 0.1.1 2008-01-15

* removed database tasks until problem with 'defer' is solved

== 0.1.0 2008-01-14

* Bugfix for empty :application variable

== 0.0.1 2008-01-14

* 1 major enhancement:
  * Initial release